; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_readonly.c_test_config_readonly__writing_to_cfg_with_ro_precedence_succeeds.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_readonly.c_test_config_readonly__writing_to_cfg_with_ro_precedence_succeeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"local\00", align 1
@cfg = common dso_local global i32 0, align 4
@GIT_CONFIG_LEVEL_LOCAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"global\00", align 1
@GIT_CONFIG_LEVEL_GLOBAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [8 x i8] c"foo.bar\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"baz\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_readonly__writing_to_cfg_with_ro_precedence_succeeds() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = call i32 @git_config_backend_from_file(%struct.TYPE_4__** %1, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store i32 1, i32* %5, align 4
  %6 = load i32, i32* @cfg, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %8 = load i32, i32* @GIT_CONFIG_LEVEL_LOCAL, align 4
  %9 = call i32 @git_config_add_backend(i32 %6, %struct.TYPE_4__* %7, i32 %8, i32* null, i32 0)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = call i32 @git_config_backend_from_file(%struct.TYPE_4__** %1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* @cfg, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %15 = load i32, i32* @GIT_CONFIG_LEVEL_GLOBAL, align 4
  %16 = call i32 @git_config_add_backend(i32 %13, %struct.TYPE_4__* %14, i32 %15, i32* null, i32 0)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32, i32* @cfg, align 4
  %19 = call i32 @git_config_set_string(i32 %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = call i32 @git_path_exists(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  %25 = call i32 @cl_assert(i32 %24)
  %26 = call i32 @git_path_exists(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %27 = call i32 @cl_assert(i32 %26)
  %28 = call i32 @p_unlink(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %29 = call i32 @cl_git_pass(i32 %28)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_backend_from_file(%struct.TYPE_4__**, i8*) #1

declare dso_local i32 @git_config_add_backend(i32, %struct.TYPE_4__*, i32, i32*, i32) #1

declare dso_local i32 @git_config_set_string(i32, i8*, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_exists(i8*) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
